can now add event given start and end time, also fixed vertical overflow for all views

--- a/src/components/structure/TaskDisplay/TaskDisplay.css
+++ b/src/components/structure/TaskDisplay/TaskDisplay.css
@@ -6,11 +6,24 @@
 }
 
 .rbc-calendar {
-  min-height: 320px;
-  max-height: 320px;
+  min-height: 600px;
+  max-height: 600px;
   box-sizing: border-box;
   width: 100%;
   height: 100%;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* flex-direction: column; */
+}
+
+.rbc-time-header {
   display: flex;
-  flex-direction: column;
+  flex: 0 0 auto; // should not shrink below height
+  flex-direction: row;
+
+}
+.rbc-time-content { flex: 1; }
+
+&.rbc-overflowing {
+  border-right: 1px solid @cell-border;
 }
